--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="My first website with XXXX" />
+    <meta name="description" content="My first website which uses an API" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Jaden Plugowsky" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
-    <title>XXXX Website</title>
+    <title>Fox Image API</title>
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
@@ -29,46 +29,21 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title" id="header-fix">Header...</span>
+          <span class="mdl-layout-title" id="header-fix">Fox Image API</span>
         </div>
       </header>
       <main class="mdl-layout__content">
         <!-- Put non-header content HERE -->
         <br />
-        <div class="right-image">
-          <img src="./images/blackholehd.jpg" alt="black hole image" />
-        </div>
-        <div class="mdl-content">Enter...</div>
+        <div class="mdl-content">Enjoy this fox image!</div>
         <br />
-        <!-- Numeric Textfield with Floating Label -->
-        <form action="#">
-          <div
-            class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-          >
-            <input
-              class="mdl-textfield__input"
-              type="text"
-              pattern="-?[.0-9]*(\.[.0-9]+)?"
-              id="example"
-            />
-            <label class="mdl-textfield__label" for="example">Number...</label>
-            <span class="mdl-textfield__error">Input is not a number or decimal!</span>
-          </div>
-        </form>
-        <!-- Colored raised button with ripple -->
-        <button
-          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
-          id="button-one"
-          onclick="buttonOneClicked()"
-        >
-          Press
-        </button>
-        <br />
+        <div id="api-image">If you see this, the image has not loaded.</div>
         <br />
         <!-- Answer to be replaced using JS -->
-        <div class="page-content-answer">
-          <div id="answer">The answer is: ...</div>
+        <div class="page-content-answer" id="link">
+          If you see this, the link has not loaded.
         </div>
+        <br />
       </main>
     </div>
   </body>
